<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainmenu_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >
    
    <ImageView
        android:id="@+id/title_image"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/start_button"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/app_title"
        android:src="@drawable/app_title" />
    
    <Button
        android:id="@+id/start_button"
        style="@style/MainMenu_title"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"        
        android:background="@android:color/transparent"
        android:text="@string/start_button" />
    
    <Button
        android:id="@+id/howtoplay_button"
        style="@style/MainMenu_title"
        android:layout_below="@+id/start_button"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:text="@string/howtoplay_button" />

    <Button
        android:id="@+id/options_button"
        style="@style/MainMenu_title"
        android:layout_below="@+id/howtoplay_button"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:text="@string/options_button" />
    
    <Button
        android:id="@+id/about_button"
        style="@style/MainMenu_title"
        android:layout_below="@+id/options_button"
        android:layout_centerHorizontal="true"        
        android:background="@android:color/transparent"
        android:text="@string/about_button" />    

</RelativeLayout>